# tidy-app

./: .gitignore  README.md  TODO.txt  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  app.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/components/: CrashReportModal.tsx  DestinationSlots.tsx  FileListPanel.tsx  HelpModal.tsx  PreviewPanel.tsx  SettingsModal.tsx  SuggestionsModal.tsx  Toolbar.tsx
src/constants/: appConstants.ts
src/hooks/: useAsyncWorkflow.ts  usePreviewController.ts  useSuggestionsController.ts
src/lib/: desktopBridge.ts  dom.ts  files.ts  format.ts  grouping.ts  media.ts  number.ts  path.ts  settings.ts  tree.ts  useVirtualScroll.ts
src/services/: fileManagerService.ts  previewService.ts  suggestionsService.ts
src/styles/: app.css
src/types/: index.ts
test/e2e/: smoke.spec.ts
test/integration/: app.integration.test.tsx
test/mocks/: bridge.ts  files.ts
test/setup/: vitest.setup.ts
test/unit/: desktopBridge.test.ts  format.test.ts  grouping.test.ts  number.test.ts  settings.test.ts  tree-path-files-dom-media.test.ts
