[package]
name = "tidy-app"
version = "0.1.0"
description = "Tidy-app media sorter"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "3.0"
walkdir = "2.5"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
