[package]
name = "tidy-app"
version = "0.1.0"
description = "Tidy-app media sorter"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "3.0"
walkdir = "2.5"
mime_guess = "2.0"
rayon = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
